NetworkModel: initialize signals only after network item is added to model to fix crashes

BUG: 473668
SENTRY: PLASMA-WORKSPACE-9H8